# sanchez.albanell.adrian

./: .dockerignore  .gitignore  .ready-tmux  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/skills/cv-sync/: SKILL.md
.github/workflows/: deploy-pages.yml
app/: __init__.py  main.py  pdf_preview.py
future/: final_cv.md  original_cv.md
scripts/: build-css.py  build-static.py  install-tailwind.sh
static/: cv.css
static/src/: cv.css  styles.css
templates/: base.html  cv.html  cv_pdf.html  index.html
